Endret til records og justert etter endringer i dokgen